--- a/apps/docs/src/pages/docs/color-palette.mdx
+++ b/apps/docs/src/pages/docs/color-palette.mdx
@@ -4,7 +4,7 @@ import { ColorPalette } from "../../components/docs/ColorPalette";
 
 # Color Palette
 
-The UI Kit’s **color palette** is designed to provide consistent visual language for **data-rich** enterprise applications.
+The **UI Kit color palette** is designed to provide consistent visual language for **data-rich** enterprise applications.
 Each color spans from **50** (lightest) to **950** (darkest), offering flexibility and accessibility across **light and dark modes**.
 
 <Callout type="warning">
@@ -25,4 +25,4 @@ const MyComponent = () => (
 );
 ```
 
-<ColorPalette />;
+<ColorPalette />
