--- a/apps/docs/src/pages/docs/color-tokens.mdx
+++ b/apps/docs/src/pages/docs/color-tokens.mdx
@@ -4,7 +4,7 @@ import { ColorTokens } from "../../components/docs/ColorTokens";
 
 # Color Tokens
 
-Color tokens are the **semantic layer** of the UI Kit’s color system, providing **consistent**, and **themeable** values for UI development.
+Color tokens are the **semantic layer** of the **UI Kit** color system, providing **consistent**, and **themeable** values for UI development.
 They ensure design integrity, maintainability, and seamless alignment between design and implementation.
 
 <Callout type="info">
