--- a/apps/docs/src/pages/docs/contributing.mdx
+++ b/apps/docs/src/pages/docs/contributing.mdx
@@ -1,63 +1,24 @@
-# Contribution guidelines
+# Contributing
 
-We welcome contributions to our project. You can help us fixing bugs or submit any new ideas, as [pull requests](#submitting-a-pull-request) or as [GitHub issues](#submitting-an-issue).
+Contributions to the **UI Kit** are welcome — whether it's fixing bugs, improving docs, suggesting components, or joining the discussion via GitHub or our community channels.
 
-Here are a few guidelines that will help you along the way:
+## Submitting an Issue
 
-- [Getting started](#getting-started)
-- [Question or problem?](#question-or-problem)
-- [New components](#new-components)
-- [Submitting an issue](#submitting-an-issue)
-- [Submitting a pull request](#submitting-a-pull-request)
-- [Coding standards](#coding-standards)
-- [Commit message guidelines](#commit-message-guidelines)
-- [Testing](#testing)
+Use our [issue templates](https://github.com/lumada-design/hv-uikit-react/issues/new/choose) when filing issues.  
+Before submitting, search existing issues to check if your question or bug has already been addressed.
 
-## Getting started
+### Bug Reports 🐛
 
-```sh
-# Clone the repository
-git clone git@github.com:lumada-design/hv-uikit-react.git
-cd hv-uikit-react
-# Install the dependencies
-npm ci
-# Start the storybook dev environment
-npm run doc
-# Alternatively start our sample application
-npm run dev
-```
+If you encounter a bug, please open a [bug report](https://github.com/lumada-design/hv-uikit-react/issues/new?template=1.bug_report.yml). Include as much detail as possible to help us reproduce the issue. Even better — feel free to submit a pull request with a fix.
 
-## Question or problem?
+### Feature Requests ✨
 
-Use GitHub issues for bug reports and feature requests or one of our available communication channels for general support questions.
+To suggest a new feature or enhancement, open a [feature request](https://github.com/lumada-design/hv-uikit-react/issues/new?template=2.feature.yml). Feature requests may include new components or improvements to existing ones.
 
-## New components
+## Submitting a Pull Request
 
-New components should be contributed to the `lab` package in `packages/lab/src/<COMPONENT_NAME>`.
-
-Check out our [Component Guidelines](./?path=/docs/overview-community-component-guidelines--docs) for a guide on how to structure components, and the [submitting a pull request](#submitting-a-pull-request) on how to contribute it.
-
-## Submitting an issue
-
-You can file new issues by selecting from our [issue templates](https://github.com/lumada-design/hv-uikit-react/issues/new/choose) and filling out the issue template.
-Before submitting an issue, please search the repository, as your issue might have been already answered.
-
-### Bugs 🐛
-
-If your issue appears to be a bug, please report it by opening [a new bug report](https://github.com/lumada-design/hv-uikit-react/issues/new?template=1.bug_report.yml).
-
-Even better if you submit a Pull Request with the fix instead.
-
-### Feature requests ✨
-
-You can request a new feature by submitting an issue to this repo.
-Features can be **new components** or changes to **existing components**.
-
-## Submitting a pull request
-
-Be sure that an issue describes the problem you're fixing, or documents the design for the feature you'd like to add.
-
-All contributions should target the `master` branch or a previous major version (eg. `v4.x`). Maintainers will be responsible for reviewing and merging the Pull Request.
+Be sure that an issue describes the problem you're fixing, or documents the design for the feature you'd like to add. All contributions should target the `master` branch or a previous major version (eg. `v4.x`).  
+Maintainers will be responsible for reviewing and merging the Pull Request.
 
 ### Setup
 
@@ -74,28 +35,44 @@ All contributions should target the `master` branch or a previous major version 
    ```
 6. Open a Pull Request. The title should follow the same [guidelines of the commit message](#commit-message-guidelines) (most of the times it can simply be the same than the first commit message).
 
-Maintainers will be reviewing your work, making comments, asking questions and suggesting changes to be made before they merge your code.
-Once all revisions to your merge request are complete, a maintainer will squash and merge your commits for you.
+Once all revisions are complete and approved, a maintainer will squash and merge your commits.
 
-**That's it! Thank you for your contribution!**
+## New components
 
-## Coding standards
+New components should be added to the `lab` package at:
 
-We enforce some style and formatting rules for source code using [ESLint](http://eslint.org/) and [Prettier](https://prettier.io/).
-Most popular IDEs have plugins that will following our linting and formatting rules. Alternatively, you can run `npm run lint` and `npm run prettier` to get a report of the issues.
+```bash
+packages/lab/src/<COMPONENT_NAME>
+```
 
-Any issues not fixed will be caught during CI, and will prevent merging.
+Refer to our [Component Guidelines](/docs/guidelines) for structure and conventions.  
+For contribution steps, see [Submitting a Pull Request](#submitting-a-pull-request).
 
-## Commit message guidelines
+## Coding Standards
 
-We enforce [Conventional Commits](https://www.conventionalcommits.org/en/v1.0.0/) specs over how our git commit messages should be formatted.
-This leads to more readable messages that are easy to follow when looking through the project history. The git commit messages are also used to generate the change log.
+We enforce consistent code style and formatting using [ESLint](https://eslint.org/) and [Prettier](https://prettier.io/).
 
-Commits must be prefixed with a `type` in order to communicate intent, an optional `scope` may be provided after a type.
+Most modern IDEs support these tools via plugins, helping you follow the project’s rules automatically.  
+You can also run the following commands locally to check and fix issues:
 
-### Type
+```sh
+npm run lint
+npm run prettier
+```
 
-Must be one of the following:
+Code that doesn’t meet our standards will fail in CI and block the merge.
+
+## Commit Message Guidelines
+
+We follow the [Conventional Commits](https://www.conventionalcommits.org/en/v1.0.0/) specification to format commit messages consistently. This approach improves readability, makes it easier to understand the project’s history, and enables automated changelog generation.
+
+Each commit message must begin with a **type**, optionally followed by a **scope**, to clearly communicate the purpose of the change:
+
+```sh
+type(scope): description
+```
+
+### Common Types
 
 - `feat:` a feature that is visible for end users.
 - `fix:` a bugfix that is visible for end users.
@@ -104,22 +81,26 @@ Must be one of the following:
 - `refactor:` a change in production code focused on readability, style and/or performance.
 - Others commit types are allowed, for example: `style:`, `perf:`, `test:`.
 
-Examples:
+### Examples
 
-```
+```sh
 docs: correct spelling of CHANGELOG
-feat(lang): added polish language
-fix(button): minor typos in code, fixes #12
+feat(lang): add Polish language support
+fix(button): minor typo in code, fixes #12
 ```
 
 ## Testing
 
-If you add any features to our code, make sure to add tests so that your changes are covered.
+All new features and fixes must include test coverage. Test your changes by running:
 
-Test your changes by running our test commands:
-
-```
+```sh
 npm run test
 ```
 
-We also execute regression tests in all pull requests and releases against the a11y standards (accessibility static analysis), end-to-end tests (using Playwright) and visual tests using Chromatic. Please keep an eye on the pull request result for detailed feedback.
+Our CI pipeline runs:
+
+- Accessibility checks (static a11y analysis)
+- End-to-end tests (Playwright)
+- Visual regression tests (Chromatic)
+
+Please keep an eye on the pull request result for detailed feedback and ensure all tests pass before requesting a review.
