--- a/apps/docs/src/pages/docs/icon-library.mdx
+++ b/apps/docs/src/pages/docs/icon-library.mdx
@@ -3,12 +3,11 @@ import { Alert, icons } from "@hitachivantara/uikit-react-icons";
 
 import { Playground } from "../../components/code/Playground";
 
-# NEXT Icon Library
+# Icon Library
 
-UI Kit also provides a library of SVG icons packaged as React components for use in applications,
-meant for the [NEXT Design System users](https://designsystem.hitachivantara.com/6c705d900/p/31e481-icons).
+The **UI Kit** includes a comprehensive library of SVG icons packaged as React components, specifically designed for use with the [NEXT Design System](https://designsystem.hitachivantara.com/6c705d900/p/31e481-icons).
 
-The icons are available in the `@hitachivantara/uikit-react-icons` package, and follow the [`HvIconContainer`](/components/icon-container) API.
+These icons are available through the `@hitachivantara/uikit-react-icons` package and are fully compatible with the [`HvIconContainer`](/components/icon-container) API, ensuring consistent sizing, color, and alignment across the system.
 
 ```tsx
 import { Alert } from "@hitachivantara/uikit-react-icons";
@@ -39,7 +38,7 @@ import { Alert } from "@hitachivantara/uikit-react-icons";
       key={name}
       className="flex flex-col items-center justify-center w-112px"
     >
-      <Icon size="M" />
+      <Icon size="S" />
       <code className="text-sm h-2em text-center break-all">{name}</code>
     </div>
   ))}
