--- a/apps/docs/src/pages/docs/icons.mdx
+++ b/apps/docs/src/pages/docs/icons.mdx
@@ -2,8 +2,8 @@ import { Callout } from "nextra/components";
 
 # Icons
 
-The UI Kit library aims to support any external SVG icon, provided that its converted to a React component.
-In most scenarios, you'll be passing the icons as properties to UI Kit components.
+The **UI Kit** library aims to support any external SVG icon, provided that its converted to a React component.
+In most scenarios, you'll be passing the icons as properties to **UI Kit** components.
 
 <Callout type="info">
   To easily convert `.svg` files to React components, use
@@ -40,7 +40,7 @@ export default function Demo() {
 
 ## `HvIconContainer`
 
-As oftentimes icons need to be used separately from components, UI Kit also provides an `HvIconContainer` utility component
+As oftentimes icons need to be used separately from components, **UI Kit** also provides an `HvIconContainer` utility component
 that handles coloring and sizing icons according to the Design System specifications.
 
 It extends an icon's capabilities by adding support for `HvColor`, and a "container box" that adds padding according to the configured icon size.
