--- a/apps/docs/src/pages/docs/introduction.mdx
+++ b/apps/docs/src/pages/docs/introduction.mdx
@@ -2,32 +2,41 @@
 
 Welcome to **UI Kit**, an open-source React UI library developed by **Hitachi Vantara** to streamline the development of high-quality digital products.
 
-**UI Kit** ensures design consistency through carefully crafted components while offering an extensive [theming system]() that allows you to create a truly unique user interface through advanced customization options.
+**UI Kit** promotes design consistency through carefully crafted components and offers a powerful [theming system](/docs/theming) that enables advanced customization for creating unique user experiences.
 
-With a complete suite of UI components, application templates, and detailed guidelines, **UI Kit** enhances development efficiency, enabling you to build better products while freeing up more time for innovation.
+With a comprehensive suite of components and detailed usage guidelines, **UI Kit** improves development speed and frees up time to focus on building innovative solutions.
 
 ## Why UI Kit
 
-- **Enhanced Productivity**: Quickly iterate on product requirements with reusable, pre-built components.
-- **Flexible Customization**: Use an extensive theming system for precise control over style and layout.
-- **Seamless Multi-Theming**: Easily create and manage multiple themes within your application.
-- **Accessibility-Centric**: Designed with accessibility in mind to ensure inclusivity for all users.
+- **Enhanced Productivity**  
+  Quickly iterate with reusable, pre-built components tailored for production.
+
+- **Flexible Customization**  
+  Leverage an extensive theming system for fine-grained control over layout and appearance.
+
+- **Seamless Multi-Theming**  
+  Easily manage multiple themes across your application with minimal setup.
+
+- **Accessibility-Centric**  
+  Built to meet accessibility standards and ensure inclusivity for all users.
 
 ## Contributing
 
-**UI Kit** is an open-source project, and contributions from the community are always welcome.
+**UI Kit** is an open-source project, and community contributions are always welcome.
 
-- **Get Started**: Review our [contribution guidelines](/CONTRIBUTING.md) to understand how you can contribute effectively.
-- **Join the Conversation**: Share your suggestions and collaborate with others to make UI Kit even better.
+- **Get Started**  
+  Read our [contribution guidelines](/docs/contributing) to learn how to contribute effectively.
+
+- **Join the Conversation**  
+  Share ideas and feedback to help improve the UI Kit for everyone.
 
 ## Support
 
-We are dedicated to ensuring the successful adoption of **UI Kit** within our community.  
-If you need assistance or have any questions, we're here to help:
+We're here to support your journey with **UI Kit**.
 
-- **Chat with Us**: Join our discussion in the [#ui-kit]() channel.
-- **Report Issues**: Explore and contribute to our [GitHub](https://github.com/lumada-design/hv-uikit-react) repository to report bugs or request features.
+- **Chat with Us**: Join the discussion in [#ui-kit](#)
+- **Report Issues**: Visit our [GitHub repository](https://github.com/lumada-design/hv-uikit-react) to report bugs or suggest features.
 
 ## License
 
-**UI Kit** is licensed under the [Apache 2.0 license](https://github.com/lumada-design/hv-uikit-react/?tab=Apache-2.0-1-ov-file#readme) License.
+**UI Kit** is licensed under the [Apache 2.0 license](https://github.com/lumada-design/hv-uikit-react/?tab=Apache-2.0-1-ov-file#readme).
