chore: remove theme context from the docs in favor of using local storage

--- a/apps/docs/src/pages/examples/inputs.mdx
+++ b/apps/docs/src/pages/examples/inputs.mdx
@@ -10,10 +10,10 @@ import tagsSuggestions from "../../examples/inputs/TagsSuggestions?raw";
 
 <div className="overflow-hidden">
   <div className="w-101% grid  divide-border [grid-template-columns:repeat(auto-fit,minmax(360px,1fr))] -mt-px -mb-px">
-    <CodeBlock id="1" code={{ main: dropdownPrefix }} layout="popup" />
-    <CodeBlock id="2" code={{ main: copyButton }} layout="popup" />
-    <CodeBlock id="3" code={{ main: tagsDropdown }} layout="popup" />
-    <CodeBlock id="4" code={{ main: tagsSuggestions }} layout="popup" />
-    <CodeBlock id="5" code={{ main: editableValue }} layout="popup" />
+    <CodeBlock code={{ main: dropdownPrefix }} layout="popup" />
+    <CodeBlock code={{ main: copyButton }} layout="popup" />
+    <CodeBlock code={{ main: tagsDropdown }} layout="popup" />
+    <CodeBlock code={{ main: tagsSuggestions }} layout="popup" />
+    <CodeBlock code={{ main: editableValue }} layout="popup" />
   </div>
 </div>
