chore: review after feedback

--- a/apps/docs/src/pages/components/badge.mdx
+++ b/apps/docs/src/pages/components/badge.mdx
@@ -46,7 +46,7 @@ Use the `icon` prop to specify a icon to use with the badge.
 Use the `maxCount` prop to specify the maximum value to be displayed. Above that value a '+' sign is displayed.
 
 ```tsx live
-<div className="flex gap-sm">
+<div className="flex gap-lg">
   <HvBadge showCount label={10} maxCount={9} />
   <HvBadge showCount label={100} maxCount={99} />
   <HvBadge showCount label={1000} maxCount={999} />
