docs: update alignmentData & misc

--- a/apps/docs/src/pages/docs/theming.mdx
+++ b/apps/docs/src/pages/docs/theming.mdx
@@ -23,7 +23,7 @@ Use the `HvProvider` to configure the active theme and color mode:
 </HvProvider>
 ```
 
-- If `themes` is not provided, the default is Pentaho+.
+- If `themes` is not provided, the default is `ds5`.
 - If only one theme is provided, `theme` can be omitted.
 - If `colorMode` is omitted, `dawn` is used by default.
 
